--- a/src/main/resources/templates/my/_header.html
+++ b/src/main/resources/templates/my/_header.html
@@ -1,4 +1,5 @@
-<html xmlns:th="http://www.thymeleaf.org"><!-- header, footer 에도 넣어줘야한다!-->
+<!DOCTYPE html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">    
     <title>롯데ON::대한민국 1등 온라인 쇼핑몰</title>    
@@ -6,8 +7,11 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script>    
-    <link rel="stylesheet" href="./css/style.css">
+    <script src="https://kit.fontawesome.com/20962f3e4b.js" crossorigin="anonymous"></script> 
+      <script src="../js/jquery.star-rating-svg.min.js"></script>
+    <script src="../js/popup.js"></script>   
+    <link rel="stylesheet" href="../css/my/style.css">
+    <link rel="stylesheet" href="../css/my/star-rating-svg.css">
 </head>
 <body>
     <div id="wrapper">
@@ -22,7 +26,7 @@
             </div>
             <div class="logo">
                 <div>
-                    <a href="../index.html"><img src="../images/header_logo.png" alt="로고"/></a>
+                    <a th:href="@{/}"><img src="../images/header_logo.png" alt="로고"/></a>
                     <form action="#">
                         <input type="text" name="search"/>
                         <button><i class="fa fa-search"></i></button>
@@ -33,14 +37,14 @@
         <div id="my">
             <nav>
                 <div>
-                    <a href="./home.html"><img src="./img/my_logo.jpg" alt="나의쇼핑정보"></a>
+                    <a th:href="@{/my/}"><img src="../images/my_logo.jpg" alt="나의쇼핑정보"></a>
                     <ol>
-                        <li><a href="#">주문·배송<span class="delivery">1</span></a></li>
-                        <li><a href="#">할인쿠폰<span class="coupon">1</span></a></li>
-                        <li><a href="#">포인트<span class="point">1,000</span></a></li>
-                        <li><a href="#">문의내역<span class="qna">1</span></a></li>
+                        <li><a th:href="@{/my/order}">주문·배송<span class="delivery">1</span></a></li>
+                        <li><a th:href="@{/my/coupon}">할인쿠폰<span class="coupon">1</span></a></li>
+                        <li><a th:href="@{/my/point}">포인트<span class="point">1,000</span></a></li>
+                        <li><a th:href="@{/my/qna}">문의내역<span class="qna">1</span></a></li>
                     </ol>
                 </div>
             </nav>
 
-</html> 
+</html>
