--- a/src/main/resources/templates/side.html
+++ b/src/main/resources/templates/side.html
@@ -25,7 +25,7 @@
                 <div>
                     <a th:href="@{/member/login}">로그인</a>
                     <a th:href="@{/member/join}">회원가입</a>
-                    <a href="#">마이페이지</a>
+                    <a th:href="@{/my/}">마이페이지</a>
                     <a th:href="@{/product/productCart}">
                         <i class="fa fa-shopping-cart" aria-hidden="true">
                             &nbsp;장바구니
