--- a/src/main/resources/templates/admin/layout/cs/qnalist.html
+++ b/src/main/resources/templates/admin/layout/cs/qnalist.html
@@ -2,6 +2,19 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="/admin/index.html">
+      <head>
+      <script>
+		  $(document).ready(function(){
+		  		document.querySelector('#faqboardCate2').addEventListener('change', function () {
+				    var selectedCate1 = document.querySelector('#faqboardCate1').value;
+				    var selectedCate2 = this.value;
+				    window.location.href = `/admin/layout/cs/qnalist?cate1=${selectedCate1}&cate2=${selectedCate2}`;
+					 
+				});
+
+		  });
+	  </script>
+	  </head>
     <section id="admin-cs-list" layout:fragment="content">
         <nav>
             <h3>문의사항</h3>
@@ -39,13 +52,15 @@
                     <td style="text-align:center; width:5" th:text="${qnalist.no}"></td>
                     <td style="text-align:center; width:10%" th:text="${qnalist.q}"></td>
                     <td style="text-align:center; width:10%" th:text="${qnalist.q2}"></td>
-                    <td style="text-align:center; width:40%">
-                        <a th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}" th:text="${qnalist.title}"></a>
+                    <td th:if="${comment == 0}" style="text-align:center; width:40%">
+                        <a  th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}" th:text="${qnalist.title}"></a>
                     </td>
+                    <td th:if="${comment != 0}" style="text-align:center; width:40%">[[${qnalist.title}]]</td>
                     <td style="text-align:center; width:10%" th:text="${#temporals.format(qnalist.rdate, 'yy-MM-dd')}"></td>
-                    <td style="text-align:center; width:10%; color: red;">[처리중]</td>
-                    <td style="text-align:center; width:10%">
-                        <a th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}" class="qnaModify">[답변]</a>
+                    <td th:if="${comment == 0}" style="text-align:center; width:10%; color: red;">[처리중]</td>
+					<td th:if="${comment != 0}" style="text-align:center; width:10%; color: green;">[처리완료]</td>
+					<td style="text-align:center; width:10%">
+                        <a th:if="${comment == 0}" th:href="@{/admin/layout/cs/qnaview(no=${qnalist.no})}" class="qnaModify">[답변]</a>
                         <a href="#" class="qnaDelete">[삭제]</a>
                     </td>
                 </tr>
@@ -54,8 +69,16 @@
             <input type="button" value="선택 삭제" class="csDelete"/>
 
             <div class="paging">
-                
-            </div>
+		        <span th:if="${pageStartNum > 1}">
+		            <a th:href="@{/admin/layout/cs/qnalist(pg=${pageStartNum - 1})}" class="prev">이전</a>
+		        </span>
+		        <span th:each="page : ${#numbers.sequence(1, totalPages)}" th:class="num">
+		            <a th:href="@{/admin/layout/cs/qnalist(pg=${page})}" th:text="${page}" th:class="num"></a>
+		        </span>
+		        <span th:if="${pageEndNum < totalPages}">
+		            <a th:href="@{/admin/layout/cs/qnalist(pg=${pageEndNum + 1})}">다음</a>
+		        </span>
+			</div>
         </section>
     </section>
 </html>
