--- a/src/main/resources/templates/my/home.html
+++ b/src/main/resources/templates/my/home.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-<th:block th:include="/my/_header.html"/>
+<th:block th:insert="/my/_header.html"/>
 <div class="home">
 				<ul>
                     <span class="menu_else"></span>
@@ -163,11 +163,11 @@
                     <div>
                         <div class="address">
                             <span>기본 배송지설정</span>
-                            <a href="#" class="setting">변경</a>
+                            <a th:href="@{/my/info}" class="setting">변경</a>
                         </div>
                         <div class="email">
                             <span>email 설정</span>
-                            <a href="#" class="setting">변경</a>
+                            <a th:href="@{/my/info}"  class="setting">변경</a>
                             <p>
                                 <span>abc123@gmail.com</span><br/>
                                 (최종수정일 <span>2021-12-10</span>)
@@ -175,7 +175,7 @@
                         </div>
                         <div class="hp">
                             <span>휴대폰 설정</span>
-                            <a href="#" class="setting">변경</a>
+                            <a th:href="@{/my/info}"  class="setting">변경</a>
                             <p>
                                 <span>abc123@gmail.com</span><br/>
                                 (최종수정일 <span>2021-12-10</span>)
@@ -191,7 +191,7 @@
         </div>
     </div>        
 
-<th:block th:include="/my/_footer.html"/>
+<th:block th:insert="/my/_footer.html"/>
     <!-- 판매자정보 팝업 -->
     <div id="popSeller" class="popup">
         <div>
