--- a/src/main/resources/templates/my/order.html
+++ b/src/main/resources/templates/my/order.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<th:block th:include="/my/_header.html"/>
+	<th:block th:insert="/my/_header.html"/>
 <div class="ordered">
 				<ul>
                     <span class="menu_else"></span>
@@ -133,5 +133,5 @@
 	    </article>                  
 	</section>
 
-<th:block th:include="/my/_footer.html"/>
+<th:block th:insert="/my/_footer.html"/>
 </html>
