--- a/src/main/resources/templates/my/coupon.html
+++ b/src/main/resources/templates/my/coupon.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<th:block th:include="/my/_header.html"/>
+	<th:block th:insert="/my/_header.html"/>
             <div class="coupon">
 				<ul>
                     <span class="menu_else"></span>
@@ -65,6 +65,6 @@
                     
 
                 </section>
-	<th:block th:include="/my/_footer.html"/>
+	<th:block th:insert="/my/_footer.html"/>
  
 </html>
