--- a/src/main/resources/templates/my/point.html
+++ b/src/main/resources/templates/my/point.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-	<th:block th:include="/my/_header.html"/>
+	<th:block th:insert="/my/_header.html"/>
 <div class="point">
 				<ul>
                     <span class="menu_else"></span>
@@ -92,5 +92,5 @@
 
             </article>                  
         </section>
-<th:block th:include="/my/_footer.html"/>       
+<th:block th:insert="/my/_footer.html"/>       
 </html>
