--- a/src/main/resources/static/css/Cs_style.css
+++ b/src/main/resources/static/css/Cs_style.css
@@ -159,6 +159,7 @@ header > .logo a {
 }
 #cs > .main > section > ul .date {
   color: #777;
+  float: right;
 }
 
 #cs > .main > .faq > ol {
@@ -979,3 +980,39 @@ footer p > strong {
   padding: 10px;
   box-sizing: border-box;
 }
+
+ /* ----- 답글을 위해 추가한 부분-------*/
+    	.qna article .qna_answer{
+            padding: 26px;
+            border-bottom: 1px solid #e9e9e9;
+        }
+        
+
+       .qna article .qna_answer > nav{
+            margin-bottom: 6px;
+            font-size: 32px;
+            font-weight: bold;  
+            
+        }
+        
+         .qna article .qna_answer > nav span{
+            margin-bottom: 6px;
+            font-size: 32px;
+            font-weight: bold;  
+            
+        }
+
+		 .qna article .qna_answer p {
+            font-size: 16px;
+            line-height: 32px;
+        }
+
+        .qna article .qna_answer > div > p span{
+            margin-top: 30px;
+            font-size: 16px;
+            line-height: 32px;
+        }
+        
+        
+
+ /* ------------------------------*/
