--- a/src/main/resources/templates/cs/board/view.html
+++ b/src/main/resources/templates/cs/board/view.html
@@ -5,10 +5,15 @@
 		
              <article layout:fragment="content">
 			  <nav>
-                <h2 class="title">[가입] [[${article.title}]]</h2>                
+				<th:block th:if="${article.group == 1}">
+                	<h2 class="title">[[${article.title}]]</h2>                
+				</th:block>	  
+				<th:block th:if="${article.group == 3}">
+                	<h2 class="title">[[${article.cate2_name}]] [[${article.title}]]</h2>                
+				</th:block>	
                 <p>
                   <span>[[${article.uid}]]</span>
-                  <span>[[${article.rdate}]]</span>
+                  <span th:text="${#temporals.format(article.rdate, 'yyyy-MM-dd')}"></span>
                 </p>
               </nav>	 
 
@@ -17,6 +22,8 @@
               <div class="content">
 				  
 				 [[${article.content}]]<br><br>  
+				 [[${article.no}]]<br><br>
+				 [[${comment.parent}]]<br><br>
 				  
                 <p>
                   개인회원에서 법인회원(사업자 회원)으로 전환은 불가하므로 법인회원(사업자 회원) 전환은 신규 가입으로 진행을 해야 합니다.
@@ -30,7 +37,28 @@
                   감사합니다.<br />
                 </p>
               </div>
-              <a th:href="@{/cs/list(group=${article.group},cate1=0)}" class="btnList">목록보기</a>
+           
+           <th:block th:if="${article.group == 3}">
+              <th:block th:if="${comment != null && article.no == comment.parent}">
+			    <div class="qna_answer">
+			        <nav>☛ [답변] <span th:text="${comment.title}"></span></nav>
+			        <div>
+			            <p>
+			                <span th:text="${comment.content}"></span>
+			            </p>
+			        </div>
+			    </div>
+			</th:block>
+			<th:block th:if="${comment == null || article.no != comment.parent}">
+			    <div class="qna_answer">
+			        <p>
+			            답변이 없습니다. 잠시만 기다려주세요.
+			        </p>
+			    </div>
+			</th:block>
+          </th:block>  
+              <a th:href="@{/cs/list(group=${article.group},cate1=${article.cate1})}" class="btnList">목록보기</a>
+            
             </article>
-      
+            
 </html>
