--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -14,8 +14,25 @@
             <div class="top">
                 <div>
                     <p>
-                        <a href="#">로그인</a>
-                        <a href="#">회원가입</a>
+                        <th:block th:if="${type eq '1'}"> <!-- 문자열 비교라 1이 아니라 '1' -->
+							<a href="#">회원 [[${uid}]] 님</a> <!-- th:href="#" 하면 오류 뜸 -->
+						</th:block>
+						<th:block th:if="${type eq '2'}">
+							<a href="#">판매자 [[${uid}]] 님</a>
+						</th:block>
+						<th:block th:if="${type eq '9'}">
+							<a href="#">관리자 [[${uid}]] 님</a>
+						</th:block>
+						<th:block th:if="${uid eq null}">  
+				            <a th:href="@{/member/login}">로그인</a>
+				            <a th:href="@{/member/join}">회원가입</a>
+			            </th:block>
+			            <th:block th:if="${uid ne null}">
+							<a th:href="@{/member/logout}">로그아웃</a>
+						</th:block>
+						<th:block th:if="${type eq '2' || type eq '9'}">
+							<a href="#">관리페이지</a>
+						</th:block>
                         <a href="#">마이페이지</a>
                         <a href="#">&nbsp;장바구니</a>
                     </p>
@@ -39,7 +56,7 @@
                     <ul th:each="article:${noticeArticles}">  
                         <li>
                             <a th:href="@{/cs/view(group=2,cate1=${article.cate1},cate2=${article.cate2},no=${article.no})}" class="title">[안내] [[${article.title}]]</a>
-                            <span class="date">[[${article.rdate}]] </span>
+                            <span class="date" th:text="${#temporals.format(article.rdate, 'yy-MM-dd')}"></span>
                         </li>
                     </ul>
                 </section>
@@ -89,11 +106,8 @@
                         <li th:each="article:${qnaArticles}">
                             <a th:href="@{/cs/view(group=3,cate1=${article.cate1},cate2=${article.cate2},no=${article.no})}" class="title">[회원] [[${article.title}]]</a>
                             <p>
-                             <span class="uid">
-					            <span th:text="${#strings.substring(article.uid, 0, 3)}"></span>
-            					<span th:text="'***'"></span>
-					        </span>
-					        <span class="date">[[${article.rdate}]]</span>
+					        	<span class="uid" th:text="${#strings.substring(article.uid, 0, 3) + '***'}"></span>
+					       		<span class="date" th:text="${#temporals.format(article.rdate, 'yy-MM-dd')}"></span>
                             </p>
                         </li>
                     </ul>
@@ -146,7 +160,7 @@
                 <li><a href="#">전자금융거래약관</a></li>
             </ul>
                 <div>
-                    <p><img src="../images/footer_logo.png" alt="로고" /></p>
+                    <p><img th:src="@{/images/footer_logo.png}" alt="로고" /></p>
                     <p>
                         <strong>(주)KMARKET</strong><br/>
                         부산시 강남구 테헤란로 152 (역삼동 강남파이낸스센터)<br/>
