비밀번호 찿기 작업

--- a/src/main/resources/templates/member/fragment/login.html
+++ b/src/main/resources/templates/member/fragment/login.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- include 이요할 때는 어떻게 썼는지 기억하기 위해 fragment 폴더 안에 모아놓음-->
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">    
