--- a/src/main/resources/templates/cs/board/moduleList.html
+++ b/src/main/resources/templates/cs/board/moduleList.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>케이마켓 고객센터</title>
     <link rel="stylesheet" th:href="@{/css/Cs_style.css}"/>
-    
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
     <div id="container">
