--- a/src/main/resources/templates/cs/index.html
+++ b/src/main/resources/templates/cs/index.html
@@ -33,8 +33,8 @@
 						<th:block th:if="${type eq '2' || type eq '9'}">
 							<a href="#">관리페이지</a>
 						</th:block>
-                        <a href="#">마이페이지</a>
-                        <a href="#">&nbsp;장바구니</a>
+                        <a th:href="@{/my/}">마이페이지</a>
+                        <a th:href="@{/product/productCart}">&nbsp;장바구니</a>
                     </p>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                     <h1>문의하기<a th:href="@{/cs/list(group=3,cate1=1)}">전체 보기</a></h1>
                     <ul>
                         <li th:each="article:${qnaArticles}">
-                            <a th:href="@{/cs/view(group=3,cate1=${article.cate1},cate2=${article.cate2},no=${article.no})}" class="title">[회원] [[${article.title}]]</a>
+                            <a th:href="@{/cs/view(group=3,cate1=${article.cate1},cate2=${article.cate2},no=${article.no})}" class="title">[ [[${article.cate1_name}]] ] [[${article.title}]]</a>
                             <p>
 					        	<span class="uid" th:text="${#strings.substring(article.uid, 0, 3) + '***'}"></span>
 					       		<span class="date" th:text="${#temporals.format(article.rdate, 'yy-MM-dd')}"></span>
