--- a/src/main/resources/templates/my/_footer.html
+++ b/src/main/resources/templates/my/_footer.html
@@ -4,7 +4,7 @@
         </div>        
         <footer>
             <ul>
-                <li><a href="#">회사소개</a></li>
+                <li><a th:href="@{/company/}">회사소개</a></li>
                 <li><a href="#">서비스이용약관</a></li>
                 <li><a href="#">개인정보처리방침</a></li>
                 <li><a href="#">전자금융거래약관</a></li>
