--- a/src/main/resources/templates/my/qna.html
+++ b/src/main/resources/templates/my/qna.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 	<th:block th:insert="/my/_header.html"/>
+	
+	
 <div class="qna">
 				<ul>
                     <span class="menu_else"></span>
@@ -13,7 +15,7 @@
                     <li><a th:href="@{/my/info}">나의설정</a></li>
                 </ul>
 	<section>
-            <a href="#"><img src="../images/my_banner1.jpg" alt="패션, 타운 하나로 끝" class="banner"></a>
+            <a href="#"><img th:src="@{/images/my_banner1.jpg}" alt="패션, 타운 하나로 끝" class="banner"></a>
             <article>
                 <h3>문의하기</h3>
 
@@ -26,54 +28,42 @@
                         <th>작성일</th>
                         <th>상태</th>
                     </tr>
-                    <tr th:each="article:${qnaList}">
-                        <td class="no">[[${article.no}]]</td>
-                        <td class="channel">[[${article.cate1}]]</td>
-                        <td class="type">[[${article.cate2}]]</td>                                
-                        <td class="tit"><a href="#">[[${article.title}]]</a></td>
-                        <td class="date">[[${article.rdate}]]</td>
-                        <td class="status" th:if="${article.comment == 1}">
-							<span class="answered">
-								답변완료
-							</span>
-						</td>
-						<td class="status" th:if="${article.comment == 0}">
-							<span class="notAnswerYet">
-								검토중
-							</span>
-						</td>
-                    </tr>
-                    <tr class="answerRow">
-                        <td colspan="6">
-                            <div class="question">
-                                <p class="tit">
-                                    신용카드 결제 중 오류가 난 경우 어떻게 하나요?
-                                    <span class="date">2022-12-16 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    결제하다가 오류가 나서 결제가 안됩니다.
-                                </p>
-                            </div>
-                            <div class="answer">
-                                <p class="tit">
-                                    주문/결제 문의 답변입니다.
-                                    <span class="date">2022-12-17 10:08:25</span>
-                                </p>
-                                <p class="content">
-                                    다른 카드로 결제 하세요. 그러면 될거에요.
-                                </p>
-                            </div>
-                        </td>
-                    </tr>
+                    
+			 		<th:block th:each="article:${qnaList}">
+	                    <tr>
+	                        <td class="no">[[${article.no}]]</td>
+	                        <td class="channel">[[${article.cate1_name}]]</td>
+	                        <td class="type">[[${article.cate2_name}]]</td>                                
+	                        <td class="tit"><a href="#">[[${article.title}]]</a></td>
+	                        <td class="date">[[${#temporals.format(article.rdate, 'yyyy-MM-dd HH:mm:ss')}]]</td>
+	                        <td class="status" th:if="${article.comment == 1}">
+								<span class="answered">
+									답변완료
+								</span>
+							</td>
+							<td class="status" th:if="${article.comment == 0}">
+								<span class="notAnswerYet">
+									검토중
+								</span>
+							</td>
+	                    </tr>
+                    </th:block>
                 </table>
 
-                <p class="page">
-                    <a href="#" class="prev">이전</a>
-                    <a href="#" class="num on">1</a>
-                    <a href="#" class="num">2</a>
-                    <a href="#" class="num">3</a>
-                    <a href="#" class="next">다음</a>
-                </p>
+               <!-- 페이지 네비게이션 -->
+		        <div class="page">
+				    <th:block th:if="${pageGroupStart > 1}">
+				        <a th:href="@{/my/qna(pg=${pageGroupStart - 1})}" class="prev">이전</a>
+				    </th:block>
+				
+				    <th:block th:each="num : ${#numbers.sequence(pageGroupStart, pageGroupEnd)}">
+				        <a th:href="@{/my/qna(pg=${num})}" th:class="${num == pg} ? 'on' : 'num'">[[${num}]]</a>
+				    </th:block>
+				
+				    <th:block th:if="${pageGroupEnd < lastPageNum}">
+				        <a th:href="@{/my/qna(pg=${pageGroupEnd + 1})}" class="next">다음</a>
+				    </th:block> 
+				</div>
             </article>
         </section>
 <th:block th:insert="/my/_footer.html"/>
