--- a/src/main/resources/templates/member/layout/register.html
+++ b/src/main/resources/templates/member/layout/register.html
@@ -16,7 +16,7 @@
 						<tr>
 							<th><span class="essential">*</span>아이디</th>
 							<td>
-								<input type="text" name="uid" placeholder="아이디를 입력" required /> 
+								<input type="text" name="uid" placeholder="아이디를 입력" required /> <!-- required 있어야 '이 입력란을 작성하세요' 뜬다 -->
 								<span class="msgId">영문, 숫자로 4~12자까지 설정해 주세요.</span>
 								<span class="resultId"></span>
 							</td>
@@ -46,6 +46,14 @@
 							<td>
 								<input type="text" name="name" placeholder="이름을 입력" required />
 								<span class="resultName"></span>
+							</td>
+						</tr>
+						<tr>
+							<th><span class="essential">*</span>생년월일</th>
+							<td>
+								<input type="text" name="birth" placeholder="생년월일 입력" required />
+								<span>8자리를 입력하세요.</span>
+								<span class="resultBirth"></span>
 							</td>
 						</tr>
 						<tr>
