--- a/src/main/resources/templates/my/_header.html
+++ b/src/main/resources/templates/my/_header.html
@@ -12,6 +12,10 @@
     <script src="../js/popup.js"></script>   
     <link rel="stylesheet" href="../css/my/style.css">
     <link rel="stylesheet" href="../css/my/star-rating-svg.css">
+    <!-- myInfo -->
+    <script src="../js/myInfo.js"></script> 
+    <script src="../member/js/zipcode.js"></script>
+    <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
 </head>
 <body>
     <div id="wrapper">
