--- a/src/main/resources/templates/member/layout/login.html
+++ b/src/main/resources/templates/member/layout/login.html
@@ -26,7 +26,7 @@
 				<span>
 	                <label><input type="checkbox" name="auto"/>자동 로그인</label>
 					<a th:href="@{/member/findId}">아이디찾기</a>
-					<a href="#">비밀번호찾기</a>
+					<a th:href="@{/member/findPass}">비밀번호찾기</a>
 					<a th:href="@{/member/join}">회원가입</a>
 				</span>
 	
